k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
        - name: logger-container
          image: namespaxe/logger:2.3
          resources:
            requests:
              memory: "90Mi"
              cpu: "90m"
            limits:
              memory: "100Mi"
              cpu: "100m"
