k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger-service
  namespace: pyinc
spec:
  selector:
    app: logger
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
